<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ServiceFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewServiceStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/mulai_service_tugas_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStartService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="scheduleJob"
            android:text="@string/mulai"
            app:layout_constraintEnd_toStartOf="@+id/buttonCancelService"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewServiceStart" />

        <Button
            android:id="@+id/buttonCancelService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="cancelJob"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonStartService"
            app:layout_constraintTop_toBottomOf="@+id/textViewServiceStart" />

        <Button
            android:id="@+id/buttonMahasiswa"
            android:layout_width="178dp"
            android:layout_height="79dp"
            android:layout_marginTop="120dp"
            android:onClick="mahasiswaList"
            android:text="@string/mahasiswa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStartService" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="163dp"
            android:layout_height="56dp"
            android:layout_marginTop="73dp"
            android:onClick="tugasSembilan"
            android:text="@string/button_tugas_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMahasiswa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>